--- a/component/connect/connect.module.scss
+++ b/component/connect/connect.module.scss
@@ -1,10 +1,10 @@
 .image_block {
   position: relative;
   width: 100%;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(234, 34, 34, 0.2);
   padding-block: 12px;
   padding-inline: 5px;
   border-radius: 5px;
@@ -12,6 +12,12 @@
     font-size: 20px;
     margin-inline: 10px;
   }
+}
+.image_block.success {
+  background: var(--main-blue-light-op08);
+}
+.image_block.fail {
+  background: rgba(234, 34, 34, 0.2);
 }
 
 .line {
@@ -42,7 +48,7 @@
   animation-iteration-count: infinite;
   width: 100%;
   height: 3rem;
-  background: url('/images/connect/line-2.png') no-repeat center;
+  background: url("/images/connect/line-2.png") no-repeat center;
   background-size: contain;
   position: relative;
   top: 0;
@@ -50,43 +56,43 @@
 
 @keyframes connect {
   10% {
-    background: url('/images/connect/line-5.png') no-repeat center;
+    background: url("/images/connect/line-5.png") no-repeat center;
     background-size: contain;
   }
   20% {
-    background: url('/images/connect/line-3.png') no-repeat center;
+    background: url("/images/connect/line-3.png") no-repeat center;
     background-size: contain;
   }
   30% {
-    background: url('/images/connect/line-2.png') no-repeat center;
+    background: url("/images/connect/line-2.png") no-repeat center;
     background-size: contain;
   }
   40% {
-    background: url('/images/connect/line-5.png') no-repeat center;
+    background: url("/images/connect/line-5.png") no-repeat center;
     background-size: contain;
   }
   50% {
-    background: url('/images/connect/line-3.png') no-repeat center;
+    background: url("/images/connect/line-3.png") no-repeat center;
     background-size: contain;
   }
   60% {
-    background: url('/images/connect/line-4.png') no-repeat center;
+    background: url("/images/connect/line-4.png") no-repeat center;
     background-size: contain;
   }
   70% {
-    background: url('/images/connect/line-2.png') no-repeat center;
+    background: url("/images/connect/line-2.png") no-repeat center;
     background-size: contain;
   }
   80% {
-    background: url('/images/connect/line-5.png') no-repeat center;
+    background: url("/images/connect/line-5.png") no-repeat center;
     background-size: contain;
   }
   90% {
-    background: url('/images/connect/line-3.png') no-repeat center;
+    background: url("/images/connect/line-3.png") no-repeat center;
     background-size: contain;
   }
   100% {
-    background: url('/images/connect/line-4.png') no-repeat center;
+    background: url("/images/connect/line-4.png") no-repeat center;
     background-size: contain;
   }
 }
