--- a/component/layout/rwd-title.module.scss
+++ b/component/layout/rwd-title.module.scss
@@ -7,6 +7,7 @@
   padding-block: 15px;
   .col_banner {
     width: 40%;
+    height: 80px;
     min-width: 200px;
     font-size: 20px;
     font-weight: bolder;
@@ -65,10 +66,6 @@
 }
 
 @media screen and (max-width: 568px) {
-  .l_banner {
-    display: flex;
-  }
-
   .banner_btn_group .banner_btn_group_child.on {
     display: grid;
   }
