--- a/component/nosharable/equitment/equitment-set.module.scss
+++ b/component/nosharable/equitment/equitment-set.module.scss
@@ -24,12 +24,13 @@
     }
   }
   .l_content {
-    height: 100%;
     display: flex;
     justify-content: space-between;
+    padding-top: 30px;
     .col_equitment_nav {
       width: auto;
       display: flex;
+      gap: 15px;
       flex-direction: column;
       justify-content: space-around;
       .nav_btn_active {
@@ -63,29 +64,29 @@
     align-items: center;
     white-space: nowrap;
   }
-  input[type='text'],
-  input[type='number'] {
+  input[type="text"],
+  input[type="number"] {
     width: 100%;
-    height: 24px;
+    height: 28px;
     background: #d9d9d9;
     border-radius: 20px;
     padding-inline: 16px;
     margin-right: 10px;
   }
   /* Chrome, Safari, Edge, Opera */
-  input[type='number']::-webkit-outer-spin-button,
-  input[type='number']::-webkit-inner-spin-button {
+  input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
   }
 
   /* Firefox */
-  input[type='number'] {
+  input[type="number"] {
     -moz-appearance: textfield;
   }
 
   /* General styling */
-  input[type='number'] {
+  input[type="number"] {
     appearance: none;
   }
 
@@ -97,16 +98,17 @@
 
 .maintainance_list {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 1vw;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: space-between;
+  // padding: 1vw;
   .list {
-    height: 80%;
+    height: 100%;
     background: #d9d9d9;
     padding: 10px;
     border-radius: 30px;
     overflow-x: hidden;
+    margin-bottom: 10px;
     .function {
       display: flex;
       justify-content: space-between;
@@ -126,9 +128,9 @@
     }
     .item {
       display: flex;
-      gap: 16px;
+      gap: 5px;
       flex-direction: column;
-      padding-block: 16px;
+      padding-block: 5px;
 
       > div {
         padding-block: 8px;
