--- a/component/nosharable/info/info.module.scss
+++ b/component/nosharable/info/info.module.scss
@@ -1,5 +1,5 @@
 .l_left_info {
-  width: 25%;
+  width: 20%;
   height: auto;
   background: var(--white-op08);
   border-radius: 30px;
@@ -30,6 +30,7 @@
     flex-direction: column;
     min-height: 50vh;
     height: calc(100% - 80px);
+    overflow-y: auto;
     > div:not(:first-child) {
       padding-block: 16px;
       display: flex;
@@ -47,6 +48,9 @@
         background-color: #189e56;
         font-size: 20px;
       }
+    }
+    > p {
+      padding-bottom: 20px;
     }
     .block {
       display: flex;
