--- a/component/nosharable/model/camera-function.module.scss
+++ b/component/nosharable/model/camera-function.module.scss
@@ -14,7 +14,8 @@
       display: flex;
       align-items: center;
       gap: 1vw;
-      button {
+      button,
+      label {
         width: 40%;
         min-width: 150px;
         text-align: center;
@@ -37,6 +38,24 @@
         border: 3px solid var(--main-blue);
         color: var(--white);
       }
+      .function_ok_btn {
+        border: none;
+        border-radius: 0;
+        background: transparent;
+        width: 50px;
+        height: 28px;
+        min-width: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.442);
+        &:active {
+          transform: translate(0, 5px);
+        }
+      }
+      input {
+        display: none;
+      }
     }
     .function_param_btn {
       justify-content: space-between;
@@ -56,6 +75,21 @@
 }
 
 @media screen and (max-width: 1200px) {
+  .l_function {
+    padding: 3%;
+    display: flex;
+    gap: 5%;
+    .col_function {
+      padding-block: 16px;
+    }
+  }
+  .bg_function {
+    background: var(--white-op08);
+    border-radius: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
   .l_function {
     padding: 3%;
     display: flex;
