--- a/component/nosharable/equitment/equitment-set.module.scss
+++ b/component/nosharable/equitment/equitment-set.module.scss
@@ -159,7 +159,7 @@
       }
     }
     .l_content {
-      justify-content: start;
+      justify-content: flex-start;
       flex-direction: column;
       .col_equitment_nav {
         display: none;
