--- a/component/nosharable/info/info.module.scss
+++ b/component/nosharable/info/info.module.scss
@@ -82,7 +82,7 @@
       position: relative;
       display: flex;
       flex-direction: column;
-      align-items: start !important;
+      align-items: flex-start !important;
       padding-left: 20px;
       line-height: 60%;
       span {
@@ -266,7 +266,7 @@
   width: 100%;
   height: 30px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   gap: 3vw;
   font-weight: bolder;
   white-space: nowrap;
