--- a/component/nosharable/setting/workway/work-card.module.scss
+++ b/component/nosharable/setting/workway/work-card.module.scss
@@ -18,7 +18,7 @@
   }
   .work_card_btn {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     padding-right: 100px;
     padding-top: 50px;
   }
