--- a/component/nosharable/setting/workway/work-card.module.scss
+++ b/component/nosharable/setting/workway/work-card.module.scss
@@ -1,7 +1,6 @@
 .l_work_card {
   width: 100%;
-  height: 100%;
-  padding: 3%;
+  padding: 18px 20px;
   display: flex;
   flex-direction: column;
   .col_work_card {
@@ -74,13 +73,11 @@
 
 @media screen and (max-width: 1200px) {
   .l_work_card {
-    gap: 15px;
     .col_work_card {
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: auto;
-      margin-block: 20px;
     }
     .work_card_btn {
       justify-content: center;
