--- a/component/nosharable/equitment/equitment-set.module.scss
+++ b/component/nosharable/equitment/equitment-set.module.scss
@@ -98,10 +98,8 @@
 
 .maintainance_list {
   height: 100%;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: space-between;
-  // padding: 1vw;
+  display: flex;
+  flex-direction: column;
   .list {
     height: 100%;
     background: #d9d9d9;
