--- a/component/navbar/navbar.module.scss
+++ b/component/navbar/navbar.module.scss
@@ -14,6 +14,7 @@
     gap: 16px;
     width: 150px;
     > button {
+      cursor: pointer;
       display: flex;
       flex-direction: column;
       align-items: center;
