--- a/component/nosharable/equitment/equitment-set.module.scss
+++ b/component/nosharable/equitment/equitment-set.module.scss
@@ -1,4 +1,5 @@
 .l_equitment {
+  width: 100%;
   height: 100%;
   border-radius: 30px;
   background: var(--white-op08);
@@ -9,12 +10,7 @@
     justify-content: space-between;
     position: relative;
     .l_title_switch {
-      display: none;
-      position: absolute;
-      right: 30px;
-      top: 0;
       cursor: pointer;
-      margin-top: 3%;
     }
     i {
       font-size: 30px;
@@ -58,11 +54,15 @@
 }
 
 .maintainance {
+  height: 400px;
   line-height: 40px;
+  overflow-y: auto;
+  overflow-x: hidden;
   > div {
     display: flex;
     align-items: center;
     white-space: nowrap;
+    padding-right: 2rem;
   }
   input[type="text"],
   input[type="number"] {
@@ -159,8 +159,13 @@
     .l_content {
       justify-content: flex-start;
       flex-direction: column;
+      padding: 0;
       .col_equitment_nav {
-        display: none;
+        background: var(--white-op08);
+        flex-direction: row;
+        scrollbar-width: none;
+        overflow-x: auto;
+        padding: 1.2rem;
       }
       .col_equitment {
         width: 100%;
