--- a/component/nosharable/info/info.module.scss
+++ b/component/nosharable/info/info.module.scss
@@ -27,10 +27,11 @@
   .left_info_content {
     display: flex;
     flex-direction: column;
+    align-items: center;
     min-height: 50vh;
     height: calc(100% - 80px);
     overflow-y: auto;
-    > div:not(:first-child) {
+    > div {
       padding-block: 16px;
       display: flex;
       justify-content: center;
@@ -41,7 +42,7 @@
       }
     }
     p {
-      width: 8vw;
+      width: 10vw;
       overflow: hidden;
       text-overflow: ellipsis;
       padding: 8px 0 10px 0;
