--- a/styles/unity.scss
+++ b/styles/unity.scss
@@ -1,3 +1,4 @@
+// draw 、fix版型
 .l_unity {
   width: 100%;
   padding: 10px;
@@ -8,7 +9,24 @@
     "lefttool unity unity unity setting"
     "lefttool . bottomtool extend  mouse";
   grid-template-columns: 150px 150px calc(100% - 620px) 150px 150px;
-  grid-template-rows: 45px 35px auto 80px;
+  grid-template-rows: 45px 35px calc(100% - 150px) 80px;
+
+  i {
+    font-size: 26px;
+  }
+}
+// show版型
+.l_show_unity {
+  width: 100%;
+  padding: 10px;
+  display: grid;
+  grid-template-areas:
+    ". name ."
+    "lefttool unity array"
+    "lefttool bottomtool mouse";
+  grid-template-columns: 150px calc(100% - 570px) 320px;
+  grid-template-rows: 50px calc(100% - 250px) 100px;
+  gap: 50px;
 
   i {
     font-size: 26px;
@@ -149,7 +167,8 @@
   justify-content: center;
   align-items: center;
   #draw,
-  #edit {
+  #edit,
+  #show {
     border: none;
     outline: none;
     height: calc(100vh * 0.625);
@@ -233,6 +252,7 @@
 .beil-active {
   position: relative;
   --beil-color: rgb(22, 90, 157);
+  color: white;
   img {
     animation: sway 0.6s ease-in 0.1s infinite;
   }
@@ -589,6 +609,124 @@
   margin: auto;
 }
 
+// 執行順序
+.tool_execution {
+  grid-area: array;
+  position: relative;
+  background-color: var(--white-op05);
+  min-height: 400px;
+  border-radius: 20px;
+  padding: 1rem;
+  transition: margin 0.3s ease-in-out;
+  width: 100%;
+  opacity: 1;
+  h1 {
+    padding-block: 20px;
+    font-size: 24px;
+    text-align: center;
+    font-weight: bolder;
+  }
+  button {
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  > div {
+    display: flex;
+    height: calc(100% - 64px);
+  }
+  .show-array-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    button {
+      position: relative;
+    }
+    button:first-child {
+      color: white;
+      background: var(--main-blue);
+    }
+    button:last-child {
+      color: white;
+      background: var(--main-orange);
+    }
+    span {
+      position: absolute;
+      top: -25%;
+      right: -40%;
+      background-color: #cfcfcf;
+      padding: 5px;
+      border-radius: 50%;
+      color: black;
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.327);
+    }
+  }
+  .show-array-content {
+    height: calc(100% - 86px);
+    margin-top: 50px;
+    overflow-x: hidden;
+    > div {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding-bottom: 8px;
+      margin-right: 12px;
+      span {
+        font-size: 12px;
+      }
+      p {
+        width: 20px;
+      }
+      button {
+        display: block;
+        width: 40px;
+        height: 40px;
+        color: black;
+        background: var(--main-blue-light);
+        box-shadow: 3px 3px 2px rgba(56, 55, 55, 0.6);
+        margin-inline: 5px;
+      }
+    }
+  }
+  .execute-bar {
+    position: absolute;
+    top: 50%;
+    left: -20px;
+    cursor: pointer;
+    transform: scaleX(1);
+    transition: all 0.3s ease;
+    i {
+      font-size: 48px;
+    }
+    .scaleXlIE {
+      transform: scaleX(-1);
+      transition: all 0.3s ease;
+    }
+    .scaleXlDE {
+      transform: scaleX(1);
+      transition: all 0.3s ease;
+    }
+  }
+}
+.open_execution_expand {
+  margin-left: auto;
+  width: 200px;
+  transition: width 0.3s ease-out, opacity 0.3s ease-in;
+  .display-point {
+    display: none;
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+.tool_save_btn {
+  margin-top: auto;
+  background: transparent;
+}
+
 @media screen and (max-height: 900px) {
   // 通知
   .beil {
@@ -641,5 +779,10 @@
       width: 100%;
       height: auto;
     }
+  }
+
+  .l_show_unity {
+    grid-template-columns: 150px calc(100% - 350px) 180px;
+    grid-template-rows: 50px calc(100% - 150px) 100px;
   }
 }
