--- a/component/nosharable/setting/workway/work-card.module.scss
+++ b/component/nosharable/setting/workway/work-card.module.scss
@@ -1,8 +1,12 @@
 .l_work_card {
   width: 100%;
+  min-height: 500px;
   padding: 18px 20px;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  background: var(--white-op08);
+  border-radius: 20px;
   .col_work_card {
     position: relative;
   }
@@ -13,19 +17,19 @@
     margin-left: auto;
   }
   .l_work_card_pathname {
-    padding: 20px 0px 20px 20px;
+    padding: 10px 0px 0px 20px;
   }
   .work_card_btn {
     display: flex;
     justify-content: flex-end;
     padding-right: 100px;
-    padding-top: 50px;
+    padding-top: 30px;
   }
 }
 
 .card {
   width: 100%;
-  height: 280px;
+  height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
