--- a/component/nosharable/model/camera-create.module.scss
+++ b/component/nosharable/model/camera-create.module.scss
@@ -2,7 +2,17 @@
   position: relative;
   width: 60%;
   height: 100%;
-  min-height: 500px;
+  > div {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 }
 
 .screen_title {
