--- a/component/nosharable/model/camera-create.module.scss
+++ b/component/nosharable/model/camera-create.module.scss
@@ -2,19 +2,8 @@
   position: relative;
   width: 60%;
   height: 100%;
-  > div {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  }
+  min-height: 500px;
 }
-
 .screen_title {
   height: 50px;
   width: 100%;
@@ -23,7 +12,7 @@
   justify-content: center;
   font-size: 30px;
 }
-
+// 點
 .fail {
   width: 100%;
   height: calc(100% - 100px);
@@ -39,49 +28,58 @@
   }
 }
 .success {
-  height: calc(100% - 50px);
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  > div {
+  .success_img {
+    width: 100%;
+    height: 100%;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 20px;
+    }
+  }
+  .success_point {
     position: absolute;
     cursor: pointer;
-  }
-  > div:nth-child(1) {
-    transform: rotate(0deg) translateY(-160px) rotate(0deg);
-  }
-  > div:nth-child(2) {
-    transform: rotate(45deg) translateY(-170px) rotate(-45deg);
-  }
-  > div:nth-child(3) {
-    transform: rotate(90deg) translateY(-180px) rotate(-90deg);
-  }
-  > div:nth-child(4) {
-    transform: rotate(135deg) translateY(-170px) rotate(-135deg);
-  }
-  > div:nth-child(5) {
-    transform: rotate(180deg) translateY(-160px) rotate(-180deg);
-  }
-  > div:nth-child(6) {
-    transform: rotate(225deg) translateY(-170px) rotate(-225deg);
-  }
-  > div:nth-child(7) {
-    transform: rotate(270deg) translateY(-180px) rotate(-270deg);
-  }
-  > div:nth-child(8) {
-    transform: rotate(315deg) translateY(-170px) rotate(-315deg);
-  }
 
+    &:nth-child(1) {
+      transform: rotate(0deg) translateY(-160px) rotate(0deg);
+    }
+    &:nth-child(2) {
+      transform: rotate(45deg) translateY(-170px) rotate(-45deg);
+    }
+    &:nth-child(3) {
+      transform: rotate(90deg) translateY(-180px) rotate(-90deg);
+    }
+    &:nth-child(4) {
+      transform: rotate(135deg) translateY(-170px) rotate(-135deg);
+    }
+    &:nth-child(5) {
+      transform: rotate(180deg) translateY(-160px) rotate(-180deg);
+    }
+    &:nth-child(6) {
+      transform: rotate(225deg) translateY(-170px) rotate(-225deg);
+    }
+    &:nth-child(7) {
+      transform: rotate(270deg) translateY(-180px) rotate(-270deg);
+    }
+    &:nth-child(8) {
+      transform: rotate(315deg) translateY(-170px) rotate(-315deg);
+    }
+  }
   i {
     font-size: 40px;
   }
-
-  img {
+  .objectimg {
     width: 100%;
     height: 100%;
     max-width: 200px;
-    max-height: 200px;
+    max-height: 150px;
   }
 }
 
