--- a/styles/unity.scss
+++ b/styles/unity.scss
@@ -634,61 +634,64 @@
     justify-content: center;
     align-items: center;
   }
-  > div {
+  .show-array {
     display: flex;
     height: calc(100% - 64px);
-  }
-  .show-array-title {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    button {
-      position: relative;
-    }
-    button:first-child {
-      color: white;
-      background: var(--main-blue);
-    }
-    button:last-child {
-      color: white;
-      background: var(--main-orange);
-    }
-    span {
-      position: absolute;
-      top: -25%;
-      right: -40%;
-      background-color: #cfcfcf;
-      padding: 5px;
-      border-radius: 50%;
-      color: black;
-      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.327);
-    }
-  }
-  .show-array-content {
-    height: calc(100% - 86px);
-    margin-top: 50px;
     overflow-x: hidden;
     > div {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      padding-bottom: 8px;
-      margin-right: 12px;
-      span {
-        font-size: 12px;
+      .show-array-title {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+        button {
+          position: relative;
+        }
+        button:first-child {
+          color: white;
+          background: var(--main-blue);
+        }
+        button:last-child {
+          color: white;
+          background: var(--main-orange);
+        }
+        span {
+          position: absolute;
+          top: -25%;
+          right: -40%;
+          background-color: #cfcfcf;
+          padding: 5px;
+          border-radius: 50%;
+          color: black;
+          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.327);
+        }
       }
-      p {
-        width: 20px;
-      }
-      button {
-        display: block;
-        width: 40px;
-        height: 40px;
-        color: black;
-        background: var(--main-blue-light);
-        box-shadow: 3px 3px 2px rgba(56, 55, 55, 0.6);
-        margin-inline: 5px;
+      .show-array-content {
+        height: calc(100% - 86px);
+        margin-top: 50px;
+        overflow-x: hidden;
+        > div {
+          display: flex;
+          align-items: center;
+          gap: 12px;
+          padding-bottom: 8px;
+          margin-right: 12px;
+          span {
+            font-size: 12px;
+          }
+          p {
+            width: 20px;
+          }
+          button {
+            display: block;
+            width: 40px;
+            height: 40px;
+            color: black;
+            background: var(--main-blue-light);
+            box-shadow: 3px 3px 2px rgba(56, 55, 55, 0.6);
+            margin-inline: 5px;
+          }
+        }
       }
     }
   }
