--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?cx7c0a');
-  src:  url('fonts/icomoon.eot?cx7c0a#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?cx7c0a') format('truetype'),
-    url('fonts/icomoon.woff?cx7c0a') format('woff'),
-    url('fonts/icomoon.svg?cx7c0a#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?hp0tzm');
+  src:  url('fonts/icomoon.eot?hp0tzm#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?hp0tzm') format('truetype'),
+    url('fonts/icomoon.woff?hp0tzm') format('woff'),
+    url('fonts/icomoon.svg?hp0tzm#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-pen-arc:before {
+  content: "\e912";
+}
 .icon-speed-left:before {
   content: "\e932";
 }
@@ -75,135 +78,11 @@
 .icon-point:before {
   content: "\e92e";
 }
-.icon-pen-area .path1:before {
+.icon-pen-area:before {
   content: "\e91d";
-  color: rgb(0, 0, 0);
 }
-.icon-pen-area .path2:before {
-  content: "\e91e";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path3:before {
-  content: "\e91f";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path4:before {
-  content: "\e920";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path5:before {
-  content: "\e921";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path6:before {
-  content: "\e922";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path7:before {
-  content: "\e923";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path8:before {
-  content: "\e924";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path9:before {
-  content: "\e925";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path10:before {
-  content: "\e926";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path11:before {
-  content: "\e927";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path12:before {
-  content: "\e928";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path13:before {
-  content: "\e929";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path14:before {
-  content: "\e92a";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path15:before {
-  content: "\e92b";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path16:before {
-  content: "\e92c";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-area .path17:before {
-  content: "\e92d";
-  margin-left: -1em;
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-flat .path1:before {
-  content: "\e91b";
-  color: rgb(0, 0, 0);
-}
-.icon-pen-flat .path2:before {
-  content: "\e91c";
-  margin-left: -1.6669921875em;
-  color: rgb(0, 0, 0);
-  opacity: 0.5;
-}
-.icon-pen-arc .path1:before {
-  content: "\e912";
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-arc .path2:before {
-  content: "\e919";
-  margin-left: -1.72265625em;
-  color: rgb(0, 0, 0);
-}
-.icon-pen-line .path1:before {
+.icon-pen-line:before {
   content: "\e910";
-  color: rgb(0, 0, 0);
-  opacity: 0.3;
-}
-.icon-pen-line .path2:before {
-  content: "\e911";
-  margin-left: -1.7646484375em;
-  color: rgb(0, 0, 0);
 }
 .icon-choose-work-way:before {
   content: "\e90f";
