--- a/styles/unity.scss
+++ b/styles/unity.scss
@@ -18,15 +18,15 @@
 // show版型
 .l_show_unity {
   width: 100%;
-  padding: 10px;
+  padding: 20px;
   display: grid;
   grid-template-areas:
     ". name ."
     "lefttool unity array"
     "lefttool bottomtool mouse";
-  grid-template-columns: 150px calc(100% - 570px) 320px;
-  grid-template-rows: 50px calc(100% - 250px) 100px;
-  gap: 50px;
+  grid-template-columns: 150px calc(100% - 470px - 40px) 320px;
+  grid-template-rows: 50px calc(100% - 150px - 40px) 100px;
+  gap: 20px;
 
   i {
     font-size: 26px;
@@ -636,51 +636,54 @@
   }
   .show-array {
     display: flex;
+    flex-direction: column;
     height: calc(100% - 64px);
+    padding-block: 20px;
     overflow-x: hidden;
     > div {
+      padding: 5px;
       .show-array-title {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 100%;
         button {
           position: relative;
-        }
-        button:first-child {
-          color: white;
-          background: var(--main-blue);
-        }
-        button:last-child {
           color: white;
           background: var(--main-orange);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 40px;
+          height: 40px;
+          cursor: pointer;
+          i {
+            font-size: 20px;
+          }
         }
         span {
           position: absolute;
           top: -25%;
-          right: -40%;
+          right: -30%;
           background-color: #cfcfcf;
           padding: 5px;
           border-radius: 50%;
           color: black;
           box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.327);
         }
+        &:hover {
+          transform: scale(1.05);
+        }
       }
       .show-array-content {
-        height: calc(100% - 86px);
-        margin-top: 50px;
         overflow-x: hidden;
         > div {
           display: flex;
           align-items: center;
-          gap: 12px;
-          padding-bottom: 8px;
-          margin-right: 12px;
+          padding-bottom: 5px;
+          margin-left: 45px;
+          p {
+            width: 16px;
+          }
           span {
             font-size: 12px;
-          }
-          p {
-            width: 20px;
+            padding-left: 3px;
           }
           button {
             display: block;
@@ -690,9 +693,15 @@
             background: var(--main-blue-light);
             box-shadow: 3px 3px 2px rgba(56, 55, 55, 0.6);
             margin-inline: 5px;
+            i {
+              color: black;
+            }
           }
         }
       }
+    }
+    i {
+      color: white;
     }
   }
   .execute-bar {
