--- a/component/nosharable/info/info.module.scss
+++ b/component/nosharable/info/info.module.scss
@@ -35,12 +35,12 @@
       justify-content: center;
       align-items: center;
       gap: 12px;
+      cursor: pointer;
       span {
         width: 30px;
       }
     }
-    p {
-      // margin: 0;
+    > p {
       padding: 8px 0 10px 0;
     }
     .block {
