--- a/styles/unity.scss
+++ b/styles/unity.scss
@@ -635,49 +635,54 @@
     align-items: center;
   }
   .show-array {
-    display: flex;
-    flex-direction: column;
+    --bottom: 5px;
     height: calc(100% - 64px);
     padding-block: 20px;
     overflow-x: hidden;
-    > div {
+    .flex-array {
       padding: 5px;
+      display: flex;
       .show-array-title {
-        button {
-          position: relative;
-          color: white;
-          background: var(--main-orange);
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 40px;
-          height: 40px;
-          cursor: pointer;
-          i {
-            font-size: 20px;
+        > div {
+          > button {
+            position: relative;
+            color: white;
+            background: var(--main-orange);
+            width: 40px;
+            height: 40px;
+            cursor: pointer;
+            margin-bottom: var(--bottom);
+            span {
+              position: absolute;
+              top: -25%;
+              right: -30%;
+              background-color: #cfcfcf;
+              padding: 5px;
+              border-radius: 50%;
+              color: black;
+              box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.327);
+            }
+            i {
+              font-size: 16px;
+            }
+          }
+          .orange-circle {
+            background: var(--main-orange);
+          }
+          .blue-circle {
+            background: var(--main-blue);
           }
         }
-        span {
-          position: absolute;
-          top: -25%;
-          right: -30%;
-          background-color: #cfcfcf;
-          padding: 5px;
-          border-radius: 50%;
-          color: black;
-          box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.327);
-        }
-        &:hover {
-          transform: scale(1.05);
+        .case-none {
+          visibility: hidden;
         }
       }
       .show-array-content {
         overflow-x: hidden;
-        > div {
+        .inner-content {
           display: flex;
           align-items: center;
-          padding-bottom: 5px;
-          margin-left: 45px;
+          padding-bottom: var(--bottom);
           p {
             width: 16px;
           }
@@ -700,8 +705,19 @@
         }
       }
     }
+    .flex-start-array {
+      justify-content: flex-start;
+    }
+    .flex-center-array {
+      justify-content: center;
+    }
     i {
       color: white;
+    }
+    .case-block {
+      visibility: hidden;
+      width: 40px;
+      height: 40px;
     }
   }
   .execute-bar {
