--- a/component/nosharable/execute/run/runscreen.module.scss
+++ b/component/nosharable/execute/run/runscreen.module.scss
@@ -96,9 +96,10 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      gap: 30px;
+      // gap: 30px;
+      // background: firebrick;
       > div > * {
-        margin-bottom: 18px;
+        margin-bottom: 12px;
       }
       .l_run_arm_setting_btn {
         margin-top: auto;
