--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -154,9 +154,9 @@
   right: 0;
   bottom: 0;
   inset: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: space-between;
 }
 
 // 主要內容
@@ -179,7 +179,7 @@ main {
     position: relative;
     width: 80%;
     height: calc(100vh - var(--header) - var(--footer) - 50px - 40px);
-    min-height: 520px;
+    // min-height: 480px;
     margin-inline: auto;
     border-radius: 30px;
     display: flex;
@@ -289,10 +289,11 @@ main {
 
 @media screen and (max-width: 1200px) {
   main {
-    // height: calc(100% - var(--header) - var(--footer));
+    height: calc(100% - var(--header) - var(--footer));
   }
 
   .container {
+    height: 100%;
     .content {
       // height: calc(100% - var(--header) - var(--footer));
       min-height: auto;
