--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?hp0tzm');
-  src:  url('fonts/icomoon.eot?hp0tzm#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?hp0tzm') format('truetype'),
-    url('fonts/icomoon.woff?hp0tzm') format('woff'),
-    url('fonts/icomoon.svg?hp0tzm#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?dp0ev0');
+  src:  url('fonts/icomoon.eot?dp0ev0#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?dp0ev0') format('truetype'),
+    url('fonts/icomoon.woff?dp0ev0') format('woff'),
+    url('fonts/icomoon.svg?dp0ev0#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-viewpoint:before {
+  content: "\e911";
+}
+.icon-modifypoint:before {
+  content: "\e919";
+}
 .icon-pen-arc:before {
   content: "\e912";
 }
