--- a/styles/unity.scss
+++ b/styles/unity.scss
@@ -50,6 +50,7 @@
   padding-block: 2vh;
   position: relative;
   margin-left: 20px;
+  text-align: center;
 
   .draw_list {
     display: flex;
@@ -78,6 +79,8 @@
     font-size: 12px;
     padding-block: 12px;
     cursor: pointer;
+    white-space: pre-line;
+    word-break: break-word;
     > div {
       display: flex;
       flex-direction: column;
@@ -88,7 +91,7 @@
       padding: 5px;
       border: 3px dashed transparent;
       img {
-        max-width: 35px;
+        max-width: 30px;
         width: 100%;
         height: 100%;
       }
